--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-
+<p><a href="#top"><em>Go to top</em></a></p><br><br>
 <p><a name"low">Low</a><p>
 </head>
 <body bgcolor="#808080"text="#0000FF">
