--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
 
 
 
-<p><a href="#top"><em>Go to top</em></a></p><br><br>
+
 <p><a name"low">Low</a><p>
+<p><a href="#top"><em>Go to top</em></a></p><br><br>
+<p><a href="#Fristpage"><em>Go to Fristpage</em></a></p><br><br>
 </head>
 <body bgcolor="#808080"text="#0000FF">
 </body>
