--- a/Firstpage.html
+++ b/Firstpage.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <title>JIRAPHAT-YENCHUEN</title>
 </head
@@ -7,9 +7,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/y42t_Ksibh4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h1>Proflie</h1>
-<h2>»ÃÐÇÑµÔÊèÇ¹µÑÇ</h2>
+<h2>ประวัติส่วนตัว</h2>
 
-<img src="50822277_387567918492187_7395583476373651456_n.jpg"width="200" height="200" alt="EARTHSHECK">
+<img src="GGWP.jpg"width="200" height="200" alt="EARTHSHECK">
 <p><b>Hello</b></p>
 <ul>
 <li><b>Name</b> : Jiraphat Yenchuen</li>
@@ -24,13 +24,13 @@
 
 
 
-<p><b>ÊÇÑÊ´Õ¤ÃÑº</b></p>
+<p><b>สวัสดีครับ</b></p>
 <ul>
-<li><b>ª×èÍ</b> ¹ÒÂ¨ÔÃ¾Ñ²¹ì  ¹ÒÁÊ¡ØÅ àÂç¹ª×é¹</li>
-<li><b>ÍÒÂØ</b> 20 »Õ</li>
-<li><b>ª×èÍàÅè¹</b> àÍÔÃì¸</li>
-<li><b>ÇÑ¹à¡Ô´</b> 30/06/2541</li>
-<li><b>ÍÒÈÑÂÍÂÙè·Õè</b> »ÃÒ¨Õ¹ºØÃÕ</li>
+<li><b>ชื่อ</b> นายจิรพัฒน์  นามสกุล เย็นชื้น</li>
+<li><b>อายุ</b> 20 ปี</li>
+<li><b>ชื่อเล่น</b> เอิร์ธ</li>
+<li><b>วันเกิด</b> 30/06/2541</li>
+<li><b>อาศัยอยู่ที่</b> ปราจีนบุรี</li>
 </ul>
 
 </head>
