--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </center>
 
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/y42t_Ksibh4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-
+<center><p><a href="https://www.youtube.com/channel/UCEPBBM7FOTv49VIP02Chrsg?view_as=subscriber"><em>Go to Channel</em></a></p><br></center>
+	
 <h1><font color="#ff00ff">Aboutme</font></h1>
 <b><marquee color="#ff00ff" scrollamount="10" behavior ="alternate">- My Profile -</marquee></b>
 
@@ -51,6 +52,8 @@
 <li><b>Education</b> : Phanakhon Si Ayutthaya Rajabhat University</li>
 <li><b>Contract</b> : ID:earthszy</li>
 <li><b>Email</b> : ep.earth@gmail.com</li>
+<center><p><a href="https://www.facebook.com/earthinnocent"><em>Facebook</em></a></p><br></center>
+<center><p><a href="https://www.instagram.com/earth_innocent/"><em>Instargam</em></a></p><br></center>
 </ul><br><br>
 <img src="G2WP.jpg"width="400" height="300">
 <h1><font color="#3366ff">My team Game</font></h1>
