--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <li><b>Education</b> : Phanakhon Si Ayutthaya Rajabhat University</li>
 <li><b>Contract</b> : ID:earthszy</li>
 <li><b>Email</b> : ep.earth@gmail.com</li>
-<center><p><a href="https://www.facebook.com/earthinnocent"><em>Facebook</em></a></p><br></center>
-<center><p><a href="https://www.instagram.com/earth_innocent/"><em>Instargam</em></a></p><br></center>
+<p><a href="https://www.facebook.com/earthinnocent"><em>Facebook</em></a></p>
+<p><a href="https://www.instagram.com/earth_innocent/"><em>Instargam</em></a></p><br>
 </ul><br><br>
 <img src="G2WP.jpg"width="400" height="300">
 <h1><font color="#3366ff">My team Game</font></h1>
