--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <p><a name"low">Low</a><p>
 <p><a href="#top"><em>Go to top</em></a></p><br><br>
-<p><a href="#Firstpage.html"><em>Next</em></a></p><br><br>
+<p><a href="firstpage.html"><em>Next</em></a></p><br><br>
 </head>
 <body bgcolor="#808080"text="#0000FF">
 </body>
