--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 
 <p><a name"low">Low</a><p>
-<p><a href="#top"><em>Go to top</em></a></p><br><br>
-<p><a href="firstpage.html"><em>Next</em></a></p><br><br>
+<p><a href="#top"><em>Go to top</em></a></p><br>
+<p><a href="firstpage.html"><em>Next to page</em></a></p>
 </head>
 <body bgcolor="#808080"text="#0000FF">
 </body>
