--- a/firstpage.html
+++ b/firstpage.html
@@ -8,7 +8,7 @@
 <h1>Proflie</h1>
 <h2>ประวัติส่วนตัว</h2>
 
-<img src="50822277_387567918492187_7395583476373651456_n.jpg"width="200" height="200" alt="EARTHSHECK">
+<img src="GGNA.jpg"width="200" height="200" alt="EARTHSHECK">
 <p><b>Hello</b></p>
 <ul>
 <li><b>Name</b> : Jiraphat Yenchuen</li>
