--- a/firstpage.html
+++ b/firstpage.html
@@ -32,6 +32,7 @@
 <li><b>อาศัยอยู่ที่</b> ปราจีนบุรี</li>
 </ul>
 
+ <p><a href="index.html"><em>comback to firstpage</em></a></p>
 </head>
 <body bgcolor="#808080"text="#0000FF">
 </body>
