--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <b><marquee color="#ff00ff" scrollamount="10" behavior ="alternate">- My Profile -</marquee></b>
 
 
-<img src="GGWP.jpg"width="200" height="200" alt="EARTHSHECK">
+&nbsp;<img src="GGWP.jpg"width="200" height="200" alt="EARTHSHECK">
 <p><b>Hello</b></p>
 <ul>
 <li><b>Name</b> : Jiraphat Yenchuen</li>
@@ -66,7 +66,7 @@
 
 
 <p><a name"low">Low</a><p>
-<p><a href="#top"><em>Go to top</em></a></p><br>
+<p><a href="#top"><em>Go to top</em></a></p>
 <p><a href="firstpage.html"><em>Next to page</em></a></p>
 </head>
 <body bgcolor="#808080"text="#0000FF">
