--- a/firstpage.html
+++ b/firstpage.html
@@ -32,7 +32,7 @@
 <li><b>อาศัยอยู่ที่</b> ปราจีนบุรี</li>
 </ul>
 
- <p><a href="index.html"><em>comback to firstpage</em></a></p>
+ <center><p><a href="index.html"><em>comback to firstpage</em></a></p><center>
 </head>
 <body bgcolor="#808080"text="#0000FF">
 </body>
