--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 </head>
 <body>
 <p><a name"top">Top</a><p>
+	
+<link href="https://fonts.googleapis.com/css?family=Itim|Sriracha" rel="stylesheet">
+<style>
+  h1 {
+font-family: 'Sriracha', cursive;
+  }
+ body {
+font-family: 'Itim', cursive;
+}
+</style>
+</head>	
 
 <div align="right"><audio controls autoplay loop>
 	<source src="love2.mp3">
