--- a/firstpage.html
+++ b/firstpage.html
@@ -1,8 +1,20 @@
 ﻿<html>
 <head>
 <title>JIRAPHAT-YENCHUEN</title>
-</head
+  </head>
 <body>
+ 
+ <link href="https://fonts.googleapis.com/css?family=Itim|Sriracha" rel="stylesheet">
+<style>
+  h1 {
+font-family: 'Sriracha', cursive;
+  }
+ body {
+font-family: 'Itim', cursive;
+}
+</style>
+</head>
+ 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/au2n7VVGv_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h1>Proflie</h1>
