--- a/firstpage.html
+++ b/firstpage.html
@@ -7,9 +7,11 @@
  <link href="https://fonts.googleapis.com/css?family=Itim|Sriracha" rel="stylesheet">
 <style>
   h1 {
+font-family: 'Shadows Into Light', cursive;
 font-family: 'Sriracha', cursive;
   }
  body {
+font-family: 'Shadows Into Light', cursive;
 font-family: 'Itim', cursive;
 }
 </style>
