--- a/firstpage.html
+++ b/firstpage.html
@@ -20,10 +20,10 @@ font-family: 'Itim', cursive;
 <iframe width="560" height="315" src="https://www.youtube.com/embed/au2n7VVGv_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h1>Proflie</h1>
-<h2>ประวัติส่วนตัว</h2>
+<h1>ประวัติส่วนตัว</h1>
 
 <img src="GGNA.jpg"width="200" height="200" alt="EARTHSHECK">
-<p><b>Hello</b></p>
+<h1><b>Hello</b></h1>
 <ul>
 <li><b>Name</b> : Jiraphat Yenchuen</li>
 <li>20 <b>old</b></li>
@@ -37,7 +37,7 @@ font-family: 'Itim', cursive;
 
 
 
-<p><b>สวัสดีครับ</b></p>
+<h1><b>สวัสดีครับ</b></h1>
 <ul>
 <li><b>ชื่อ</b> นายจิรพัฒน์  นามสกุล เย็นชื้น</li>
 <li><b>อายุ</b> 20 ปี</li>
