--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ font-family: 'Itim', cursive;
 
 
 &nbsp;<img src="GGWP.jpg"width="200" height="200" alt="EARTHSHECK">
-<p><b>Hello</b></p>
+<h1><b>Hello</b></h1>
 <ul>
 <li><b>Name</b> : Jiraphat Yenchuen</li>
 <li>20 <b>old</b></li>
